--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,12 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
+    <TextView
+        android:id="@+id/texto_inicial"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="30sp" />
+
     <Button
         android:layout_width="wrap_content"
         android:layout_height="60dp"
@@ -25,5 +31,11 @@
         android:layout_height="60dp"
         android:text="Ir a crear lugar"
         android:onClick="irACrearLugar"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="60dp"
+        android:text="Cambiar Texto"
+        android:onClick="cambiarTexto"/>
 
 </LinearLayout>
