--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,12 +5,46 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:gravity="center"
     tools:context=".activities.LoginActivity">
 
-    <TextView
+    <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Pantalla de login"
-        android:textSize="30sp" />
+        android:layout_marginBottom="50dp"
+        android:src="@mipmap/ic_launcher_round" />
+
+    <EditText
+        android:layout_width="300dp"
+        android:layout_height="70dp"
+        android:hint="Escriba su correo"
+        android:inputType="textEmailAddress"/>
+
+    <EditText
+        android:layout_width="300dp"
+        android:layout_height="70dp"
+        android:hint="Escriba su contraseña"
+        android:inputType="textPassword"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center"
+        android:layout_marginTop="30dp">
+    
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="70dp"
+            android:layout_marginEnd="20dp"
+            android:text="Iniciar Sesión" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="70dp"
+            android:text="Registrarse" />
+
+    </LinearLayout>
 
 </LinearLayout>
