--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -18,13 +18,13 @@
     <EditText
         android:layout_width="300dp"
         android:layout_height="70dp"
-        android:hint="Escriba su correo"
+        android:hint="@string/txt_email"
         android:inputType="textEmailAddress"/>
 
     <EditText
         android:layout_width="300dp"
         android:layout_height="70dp"
-        android:hint="Escriba su contraseña"
+        android:hint="@string/txt_password"
         android:inputType="textPassword"/>
 
     <LinearLayout
@@ -38,12 +38,12 @@
             android:layout_width="wrap_content"
             android:layout_height="70dp"
             android:layout_marginEnd="20dp"
-            android:text="Iniciar Sesión" />
+            android:text="@string/txt_btn_inicio_sesion" />
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="70dp"
-            android:text="Registrarse" />
+            android:text="@string/txt_btn_registrarse" />
 
     </LinearLayout>
 
