--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -15,17 +15,41 @@
         android:layout_marginBottom="50dp"
         android:src="@mipmap/ic_launcher_round" />
 
-    <EditText
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/email_layout"
         android:layout_width="300dp"
         android:layout_height="70dp"
-        android:hint="@string/txt_email"
-        android:inputType="textEmailAddress"/>
+        app:boxStrokeWidth="0dp"
+        app:boxStrokeWidthFocused="0dp">
 
-    <EditText
+        <EditText
+            android:id="@+id/email_usuario"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:hint="@string/txt_email"
+            android:inputType="textEmailAddress"
+            android:background="@drawable/fondo_forms"/>
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/password_layout"
         android:layout_width="300dp"
         android:layout_height="70dp"
-        android:hint="@string/txt_password"
-        android:inputType="textPassword"/>
+        android:layout_marginTop="10dp"
+        app:boxStrokeWidth="0dp"
+        app:boxStrokeWidthFocused="0dp">
+
+        <EditText
+            android:id="@+id/password_usuario"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:hint="@string/txt_password"
+            android:inputType="textPassword"
+            android:background="@drawable/fondo_forms"/>
+
+
+    </com.google.android.material.textfield.TextInputLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -35,12 +59,14 @@
         android:layout_marginTop="30dp">
     
         <Button
+            android:id="@+id/btn_login"
             android:layout_width="wrap_content"
             android:layout_height="70dp"
             android:layout_marginEnd="20dp"
             android:text="@string/txt_btn_inicio_sesion" />
 
         <Button
+            android:id="@+id/btn_registro"
             android:layout_width="wrap_content"
             android:layout_height="70dp"
             android:text="@string/txt_btn_registrarse" />
