--- a/app/src/main/res/layout/activity_crear_lugar.xml
+++ b/app/src/main/res/layout/activity_crear_lugar.xml
@@ -1,18 +1,98 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".activities.CrearLugarActivity">
+    android:layout_height="match_parent">
 
-    <!-- Clase 7 PDF
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Pantalla de crear lugar"
-        android:textSize="30sp" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:gravity="center"
+        tools:context=".activities.CrearLugarActivity">
+
+        <!-- Clase 7 PDF
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Pantalla de crear lugar"
+            android:textSize="30sp" />
         -->
 
-</LinearLayout>
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="50dp"
+            android:src="@mipmap/ic_launcher_round" />
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/nombre_layout"
+            style="@style/til_form">
+
+            <EditText
+                android:id="@+id/nombre_lugar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/txt_nombre_lugar"
+                android:background="@drawable/fondo_forms"/>
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/descripcion_layout"
+            style="@style/til_form">
+
+            <EditText
+                android:id="@+id/descripcion_lugar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:lines="8"
+                android:gravity="left"
+                android:hint="@string/txt_descripcion_lugar"
+                android:background="@drawable/fondo_forms"/>
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <Spinner
+            android:id="@+id/ciudad_lugar"
+            android:layout_width="300dp"
+            android:layout_height="50dp"
+            android:paddingStart="10dp"
+            android:paddingEnd="10dp"
+            android:background="@drawable/fondo_forms"
+            android:layout_marginBottom="10dp" />
+
+        <Spinner
+            android:id="@+id/categoria_lugar"
+            android:layout_width="300dp"
+            android:layout_height="50dp"
+            android:paddingStart="10dp"
+            android:paddingEnd="10dp"
+            android:background="@drawable/fondo_forms"
+            android:layout_marginBottom="10dp" />
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/telefono_layout"
+            style="@style/til_form">
+
+            <EditText
+                android:id="@+id/telefono_lugar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="phone"
+                android:hint="@string/txt_telefono_lugar"
+                android:background="@drawable/fondo_forms"/>
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <Button
+            android:id="@+id/btn_crear_lugar"
+            android:layout_width="wrap_content"
+            android:layout_height="70dp"
+            android:text="@string/txt_btn_crear_lugar" />
+
+    </LinearLayout>
+
+</ScrollView>
