--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -19,7 +19,7 @@
         android:id="@+id/nombre_layout"
         style="@style/til_form">
 
-        <EditText
+        <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/nombre_usuario"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -32,7 +32,7 @@
         android:id="@+id/nickname_layout"
         style="@style/til_form">
 
-        <EditText
+        <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/nickname_usuario"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -45,7 +45,7 @@
         android:id="@+id/email_layout"
         style="@style/til_form">
 
-        <EditText
+        <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/email_usuario"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -59,7 +59,7 @@
         android:id="@+id/password_layout"
         style="@style/til_form">
 
-        <EditText
+        <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/password_usuario"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
